--- a/music-website-server/src/main/resources/application.yml
+++ b/music-website-server/src/main/resources/application.yml
@@ -5,6 +5,10 @@ server:
       min-spare: 30
       max: 1000
     connection-timeout: 5000ms
+  ssl:
+    enabled: true
+    key-store: classpath:salieri.love.jks
+    key-store-password: 141315?a
 
 spring:
   servlet:
@@ -23,6 +27,7 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.example.salieri.entity
-
+logging:
+  config: classpath:log4j.xml
 
 
