服务器SSL证书更换，项目对应SSL证书信息修改

--- a/music-website-server/src/main/resources/application.yml
+++ b/music-website-server/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
   ssl:
     enabled: true
     key-store: classpath:salieri.love.jks
-    key-store-password: 141315?a
+    key-store-password: x9lw8uis4x
 
 spring:
   servlet:
